ajout de la dernier ligne

--- a/Les_transparent/corps/objet.tex
+++ b/Les_transparent/corps/objet.tex
@@ -860,6 +860,8 @@ shadow, text centered, text=white, text width=2cm, rectangle split, rectangle sp
 	\emph{for} f \emph{in} l\_figures :
 	
 	 \hspace{1cm}print(f.aire())
+	
+	\# fin de code
 	}
   \end{semiverbatim}
  
