rappel tableau numpy et les algorithme de tris

--- a/Les_transparent/python3.tex
+++ b/Les_transparent/python3.tex
@@ -1,11 +1,11 @@
 \makeatletter\def\input@path{{images/}{styles/}{corps/}{bib/}}\makeatother
 
 \documentclass{transp_java}
-
-\title[Langage et algorithmique]{Langage et algorithmique}
+\usepackage{etex}
+\title[Langage et algorithmique]{Tableaux et Algo de tris}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2015/2016}
+\date{2016/2017}
 \institute{ENSTA Bretagne}
 
 
@@ -47,7 +47,7 @@
 
 %%%
 \input{tris_malek}
-
+\input{horloge}
 \end{document}
 
 
