--- a/Les_transparent/corps/tris_malek.tex
+++ b/Les_transparent/corps/tris_malek.tex
@@ -7,8 +7,8 @@
 
 
 \begin{frame}
-  \frametitle{Les types intégrés}
-
+  \frametitle{Les types intégrés\chrono}
+    \initclock
 
 \begin{itemize}
 \item Les types simples : 
@@ -29,9 +29,9 @@
 		\end{itemize}
  \end{itemize}
 \pause
-\begin{alertblock}{Le type tableau}
+\begin{alertblock}{Le type tableau/matrice}
   \begin{itemize}
-	 \item Pas de type tableau (array) en Python
+	 \item Pas de type tableau en Python
  \end{itemize}
 \end{alertblock}
 \end {frame}
@@ -40,14 +40,14 @@
 \section{Les Tableaux}
 \subsection{Création d'un tableau}
 \begin{frame}
-  \frametitle{Les tableaux}
+  \frametitle{Les tableaux\chrono}
 
   \begin{defi}[Tableau]
     Structure de données contenant plusieurs éléments du \emph{même type}
     \begin{itemize}
 			\item Les listes (list) 
 			\item Utilisation des tableaux (\texttt{array}) de Numpy, Scipy MatplotLib 
-			\item \verb!=>! Convertir une liste en tableau avec la fonction \emph{array()} de Numpy
+			\item \verb!=>! Convertir une liste en tableau avec les fonctions \emph{array(), matrix() } de Numpy
 		\end{itemize}
    \end{defi}
 
@@ -58,26 +58,27 @@
 \vspace{-0.5cm}
 import numpy as np    \hspace{ 1.1cm}   \textcolor[rgb]{0,0.58,0}{\# import avec alias }
 
-L = np.array([.2, 4 ,5])  \hspace{ 0.1cm}   \textcolor[rgb]{0,0.58,0}{ \# crée un vecteur de 3 réels}
+v = np.array([.2, 4 ,5])  \hspace{ 0.1cm}   \textcolor[rgb]{0,0.58,0}{ \# crée un vecteur de 3 réels}
 
-L = np.array(range(10), dtype = np.float) \textcolor[rgb]{0,0.58,0}{\# crée un vecteur }
+v = np.array(range(10), dtype = np.float) \textcolor[rgb]{0,0.58,0}{\# crée un vecteur }
 
 \hspace{ 6.8cm}   \textcolor[rgb]{0,0.58,0}{\# de 10 réels}
 
-M = np.array([[0,2],[np.pi,5]]) \textcolor[rgb]{0,0.58,0}{\# création d'une matrice } 
+m = np.array([[0,2],[np.pi,5]]) \textcolor[rgb]{0,0.58,0}{\# création d'une matrice } 
 
 \hspace{ 4cm} \textcolor[rgb]{0,0.58,0}{\# de 2 lignes et 2 colonnes de réels}
 
 \end{semiverbatim}
 }
 \end{exemple}	
+
 \end{frame}
 
 
 
 
 \begin{frame}
-\frametitle{Les tableaux}
+\frametitle{Les tableaux\chrono}
 \begin{exemple} [Création d'un tableau Numpy]
 
 \begin{semiverbatim}
@@ -97,19 +98,14 @@ N = np.arange(2,5) \hspace{ 0.8cm} \textcolor[rgb]{0,0.58,0}{\# renvoie [2,3,4]}
 \end{frame}
 
 
-
-
-
-
-
 \begin{frame}
-\frametitle{Opérations}
+\frametitle{Opérations\chrono}
 \begin{itemize}
 		\item Opération élément pas élément : addition (A+B), produit (A*B), puissance (A**B)\\
 	 exemple : \texttt{tab+2; tab*2; tab**3; tab + tab*2; tab**tab}
-	\item Produit matriciel : \texttt{dot(A,B)}
-	exemple : \texttt{np.dot(tab,tab.T)}
-  \item Concaténation : np.concatenate ((A,B)). exemple : \texttt{np.concatenate((tab,tab), axis=0) }
+	\item Produit matriciel : \texttt{dot(A,B), A$@$B}\\
+	%exemple : \texttt{np.dot(tab,tab.T)  ou \textcolor{red}{\verb!@!}}
+  \item Concaténation : np.concatenate((A,B)). \\ exemple : \texttt{np.concatenate((tab,tab), axis=0) }
 \end{itemize}
 
 \begin{propriete}
@@ -118,8 +114,23 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
 
 \end{frame}
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \begin{frame}
-\frametitle{Copie d'un tableau}
+\frametitle{Copie d'un tableau\chrono}
 
 \begin{alertblock}{Copie de tableau}
 \begin{semiverbatim}
@@ -144,7 +155,7 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
 
 
 \begin{frame}
-  \frametitle{Accès aux éléments d'un tableau}
+  \frametitle{Accès aux éléments d'un tableau\chrono}
   
 	\begin{remarque}
    Utiliser la vectorisation quand c'est possible 
@@ -176,13 +187,13 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
 	\end{frame}
 	
 	\begin{frame}
-  \frametitle{Accès aux éléments des tableaux}
+  \frametitle{Accès aux éléments des tableaux\chrono}
   \begin{itemize}
   \item Accéder à un élément = accéder à une case du tableau
   \item Opérateur \texttt{[]}
   \item Première case : 0
   \item Tableaux multidimensionnels : plusieurs indices ex. M[i,j] ou M[i][j]
-  \item Taille du tableau : \emph{len(tab}), \emph{len(tab[0])}, \ldots{}
+  \item Taille du tableau : \emph{shape(tab), len(tab}), \emph{len(tab[0])}, \ldots{}
   \end{itemize}
 
   \begin{exemple}[Accès aux éléments des tableaux]
@@ -201,9 +212,10 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
 
 			M[0,:]  ;   M[0][:]            \textcolor[rgb]{0,0.58,0}{\# renvoient la première ligne}
 
-		  len(M)  \hspace{ 1.4cm} \textcolor[rgb]{0,0.58,0}{\#  renvoie 2 }
+		  \only<2>{len(M)  \hspace{ 1.4cm} \textcolor[rgb]{0,0.58,0}{\#  renvoie 2 }
 			
-			len(M[0])  \hspace{ 0.9cm}  \textcolor[rgb]{0,0.58,0}{\#  renvoie 3 }
+			len(M[0])  \hspace{ 0.9cm}  \textcolor[rgb]{0,0.58,0}{\#  renvoie 3 }}
+			\only<3>{np.shape(M)  \hspace{ 1.4cm} \textcolor[rgb]{0,0.58,0}{\#  renvoie (2,3) }}
 		
 		\end{semiverbatim}
 		}
@@ -216,19 +228,19 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
 	
 		
 	\begin{frame}
-  \frametitle{Accès aux éléments des tableaux}
+  \frametitle{Accès aux éléments des tableaux\chrono}
  
  \begin{itemize}
 	 \item Parcourir un tableau à l'aide d'une boucle
  \end{itemize}
 		\begin{exemple}
 	    \begin{semiverbatim}
+			\vspace{-.5cm}
 		  import numpy as np
 			
 			tab = np.array(\emph{range}(10))
 			
-    
-			\emph{for} i in \emph{range}(\emph{len}(tab)):
+    	\emph{for} i in \emph{range}(\emph{len}(tab)):
 			
       \hspace{1cm}tab[i] = ....
 		
@@ -236,8 +248,7 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
     \end{semiverbatim}
 \pause
     \begin{semiverbatim}
-      
-					
+      					
       \emph{for} \textcolor[rgb]{1,0,0}{i, val} \emph{ in enumerate}(tab):
 			
       \hspace{1cm}tab[i] = val + ...
@@ -268,12 +279,13 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
 
 
 \begin{frame}[fragile]
-  \frametitle{Mélange d'un tableau}
+  \frametitle{Mélange d'un tableau\chrono}
   \begin{algorithm2e}[H]
     \caption{Mélange()}
     \KwIn{tab : entier[]}
     \KwData{i, n : entier}
     $n \gets taille(tab)-1$ 
+		
     \While{$n>0$} {
       $i \gets $ nombre aléatoire entre 0 et $n$ inclus
 			
@@ -285,18 +297,37 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{Mélange d'un tableau}
+  \frametitle{Mélange d'un tableau\chrono}
   \begin{lstlisting}
-  n = len(tab) - 1 
-  while (n>0) {
-    # générer un nombre aléatoire entre 0 et 
-    # n inclus
-    i = np.random.randint(0, n)
-    tab[i], tab[n] = tab[n], tab[i]
-    n -= 1
-  }
+	import numpy as np
+	n = len(tab) - 1 
+	while n>0 :
+	  # générer un nombre aléatoire entre 0 et 
+	  # n inclus
+	  i = np.random.randint(0, n)
+	  tab[i], tab[n] = tab[n], tab[i]
+	  n -= 1
   \end{lstlisting}
 \end{frame}
+\subsection{Excercice}
+\begin{frame}[fragile]
+  \frametitle{Excercice\chrono}
+  \begin{semiverbatim}
+	\vspace{-1cm}
+	>>>import numpy as np
+	>>>tab = np.array([[1, 2, 3],[4, 5]])
+	>>>tab ? , np.shape(tab) ?
+\only<2>{tab = erreur? }\only<3>{array([[1, 2, 3],
+      [4, 5, 0]] , (2,3)}\only<4>{array([[1, 2, 3], [4, 5]]), (2,)}\only<5>{\textcolor[rgb]{0,0.58,0}{\# solution :} 
+			array([[1, 2, 3], [4, 5]], dtype=object), (2,)}
+  \end{semiverbatim}
+\end{frame}
+
+
+
+
+
+
 
 \section{Algorithmes de tris}
 
@@ -304,7 +335,7 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
 \subsection{Tri par sélection}
 
 \begin{frame}
-  \frametitle{Principe du tri par sélection}
+  \frametitle{Principe du tri par sélection\chrono}
   \only<1-9>{
   \begin{itemize}
   \item Rechercher le plus petit élément du tableau
@@ -385,7 +416,7 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
 \end{frame}
 
 \begin{frame}
-  \frametitle{Algorithme du tri par sélection}
+  \frametitle{Algorithme du tri par sélection\chrono}
 {\small
 \begin{algorithm2e}[H]
   \caption{triSel}
@@ -425,7 +456,7 @@ Les dimensions des vecteurs-matrices doivent êtres conformes à l'opération souha
 
 
 \begin{frame}[fragile]
-  \frametitle{Algorithme tri par sélection}
+  \frametitle{Algorithme tri par sélection\chrono}
   	{\small
 	
 
@@ -451,7 +482,7 @@ def trisel(tab):
 
 
 \begin{frame}[fragile]
-  \frametitle{Algorithme tri par sélection}
+  \frametitle{Algorithme tri par sélection\chrono}
   	{\small
 	
 	\begin{lstlisting}[caption={Tri par sélection optimisé pour numpy}]
@@ -493,7 +524,7 @@ def trisel(tab):
 %\end{frame}
 
 \begin{frame}
-  \frametitle{Étude de la complexité du tri}
+  \frametitle{Étude de la complexité du tri\chrono}
   \begin{defi}{Complexité}
 	  Ordre de grandeur du nombre d'opérations d'un algorithme. Notation $\Theta(g(n))$.
    \end{defi}
@@ -519,7 +550,7 @@ def trisel(tab):
 \subsection{Tri bulles}
 
 \begin{frame}
-  \frametitle{Principe du tri bulles}
+  \frametitle{Principe du tri bulles\chrono}
   \only<1-10>{
   \begin{itemize}
   \item Très simple à mettre en \oe uvre
@@ -605,7 +636,7 @@ def trisel(tab):
 
 
 \begin{frame}
-  \frametitle{Algorithme du tri bulles}
+  \frametitle{Algorithme du tri bulles\chrono}
 {\small
 \begin{algorithm2e}[H]
   \caption{Algorithme du tri bulles}
@@ -641,7 +672,7 @@ def trisel(tab):
 \subsection{Tri par insertion}
 
 \begin{frame}
-  \frametitle{Principe du tri par insertion}  
+  \frametitle{Principe du tri par insertion\chrono}  
   \begin{itemize}
   \item<1-> Principe : découper le tableau en deux parties
   \item<2-> Une partie triée
@@ -739,7 +770,7 @@ def trisel(tab):
 \end{frame}
 
 \begin{frame}
-  \frametitle{Principe du tri par insertion}  
+  \frametitle{Principe du tri par insertion\chrono}  
   \begin{itemize}
  % \item<1->  {\scriptsize Généralement, nous trions le tableau lorsque nous insérons ses éléments dedans, lors de leur insertion, d'où le nom du tri.}
   \item<1-> {\scriptsize Exemple : Insérer 11, 2, 16, 10 et 1 dans un tableau en cherchant à le trier.}
@@ -749,7 +780,7 @@ def trisel(tab):
 \end{frame}
 
 \begin{frame}
-  \frametitle{algorithme}
+  \frametitle{algorithme de tris par insertion\chrono}
 {\small  
 \begin{algorithm2e}[H]
   \caption{Algorithme du tri par insertion}
@@ -791,7 +822,7 @@ def trisel(tab):
 \subsection{Tri shell}
 
 \begin{frame}
-  \frametitle{Principe du tri shell}
+  \frametitle{Principe du tri shell\chrono}
   \begin{itemize}
   \item Proposé en 1959 par Donald L. Shell
   \item Tri par insertion optimisé
@@ -811,7 +842,7 @@ def trisel(tab):
 
 
 \begin{frame}
-  \frametitle{Algorithme du tri shell}
+  \frametitle{Algorithme du tri shell\chrono}
 {\small  
 \begin{algorithm2e}[H]
   \caption{Tri Shell}
@@ -844,7 +875,7 @@ def trisel(tab):
 
 
 \begin{frame}
-  \frametitle{Algorithme du tri shell}
+  \frametitle{Algorithme du tri shell\chrono}
 %  \begin{columns}
 %  \column{6.5cm}
 {\small  
@@ -886,27 +917,26 @@ def trisel(tab):
 \end{frame}
 %
 %\begin{frame}
-%  \frametitle{Étude du tri shell}
-%  \begin{itemize}[<+->]
-%  \item Complexité dépend de la suite $h_n$ utilisée
-%  \item Meilleure suite inconnue
-%  \item Complexités dans le pire des cas connues :
-%    \begin{itemize}
-%    \item $h_i=2^{i+1}-1 \leadsto \Theta(n^\frac32)$
-%    \end{itemize}
-%  \item Complexités moyennes connues :
-%    \begin{itemize}
-%    \item $h_i=2^{i+1}-1 \leadsto \Theta(n^\frac32)$
-%    \item $h_i=2^p3^q \leadsto \Theta(n \log^2 n)$
-%    \end{itemize}
-%  \end{itemize}
-%\end{frame}²	
-%*/
+  %\frametitle{Étude du tri shell\chrono}
+  %\begin{itemize}[<+->]
+  %\item Complexité dépend de la suite $h_n$ utilisée
+  %\item Meilleure suite inconnue
+  %\item Complexités dans le pire des cas connues :
+    %\begin{itemize}
+    %\item $h_i=2^{i+1}-1 \leadsto \Theta(n^\frac32)$
+    %\end{itemize}
+  %\item Complexités moyennes connues :
+    %\begin{itemize}
+    %\item $h_i=2^{i+1}-1 \leadsto \Theta(n^\frac32)$
+    %\item $h_i=2^p3^q \leadsto \Theta(n \log^2 n)$
+    %\end{itemize}
+  %\end{itemize}
+%\end{frame}	
 
 \subsection{Autres tris}
 
 \begin{frame}
-  \frametitle{Autres tris}
+  \frametitle{Autres tris\chrono}
   Il existe d'autres tris plus performants mais plus complexes.
   \begin{itemize}
   \item tri par segmentation (quicksort)
